# async-loom

./: .gitignore  DEPLOYMENT.md  README.md  azure-container-apps.yaml  deploy-local.sh  deploy.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
copilot-extension/: Dockerfile  README.md  extension.js  package.json  package.json.vscode  tsup.config.js
copilot-extension/src/: index.ts
copilot-extension/vscode-extension/: extension.ts
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: GitHubActionsWizard.tsx  MarkdownRenderer.tsx
teams-v2-sdk/: Dockerfile  package.json  tsconfig.json
teams-v2-sdk/appPackage/: manifest.json
teams-v2-sdk/src/: index.ts
teams-v2-sdk/src/cards/: configurationCard.ts  designSystem.ts  helpCard.ts  resultsCard.ts  statusDisplayCard.ts  taskCreationCard.ts
teams-v2-sdk/src/tests/: integration.test.ts  session-mapping.test.ts
teams-v2-sdk/tests/cards/: README.md  TESTING_GUIDE.md  adaptiveCardValidator.ts  basicCardTest.ts  cardTests.ts  install-deps.sh  jest.config.js  mockData.ts  package.json  runTests.ts  simpleTests.ts  testRunner.ts  tsconfig.json  visualRenderingTests.ts
teams-v2-sdk/tests/cards/__tests__/: configurationCard.test.ts  helpCard.test.ts  resultsCard.test.ts  statusDisplayCard.test.ts  taskCreationCard.test.ts
